# testando-rag

./: README.md  main.py  pyproject.toml
chromadb_base/: chroma.sqlite3
documentos/: ord-10171-2025-belem-pa.docx  ord-10172-2025-belem-pa.docx  ord-10173-2025-belem-pa.docx
src/: processar_documentos.py  sistema_rag.py
