[project]
name = "testando-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "docling>=2.43.0",
    "langchain>=0.3.27",
    "ollama>=0.5.1",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
]
